--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,12 +8,11 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 networkx = "^3.2.1"
-fastapi = "^0.110.0"
-uvicorn = "^0.27.1"
 black = "^24.2.0"
 flake8 = "^7.0.0"
 isort = "^5.13.2"
 pre-commit = "^3.6.2"
+streamlit = "^1.31.1"
 
 
 [build-system]
