--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ flake8 = "^7.0.0"
 isort = "^5.13.2"
 pre-commit = "^3.6.2"
 streamlit = "^1.31.1"
+matplotlib = "^3.8.3"
+scipy = "^1.12.0"
 
 
 [build-system]
