--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ pre-commit = "^3.6.2"
 streamlit = "^1.31.1"
 matplotlib = "^3.8.3"
 scipy = "^1.12.0"
+openpyxl = "^3.1.2"
+pandas = "^2.2.1"
 
 
 [build-system]
